# Useless-Document-Generator-p8

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/attestation/: deplacement.rs  generate_attestation.rs  mod.rs
src/cv/: cv.rs  generate_cv.rs  mod.rs
src/glade/: #cv.glade#  attestation_deplacement.glade  attestation_deplacement.glade~  cv.glade  cv.glade~  lettre_resiliation.glade  menu.glade  menu.glade~  test.glade  test.glade~  user.glade
src/resiliation/: generate_letter.rs  letter.rs  mod.rs
src/window/: cv.rs  generate_cv.rs  menu.rs  mod.rs  user.rs
