[package]
name = "document_generator"
version = "0.1.0"
authors = ["Dinath <dinath22@live.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
printpdf = "0.3.2"
chrono = "0.4"
anyhow = "1.0.35"

[dependencies.gtk]
version = "0.9.0"
features = ["v3_16"]